--- a/others/main.html
+++ b/others/main.html
@@ -3,8 +3,22 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>無標題文件</title>
-</head>
+<style type="text/css">
+.f1 {
+	color: #F0F;
+}
+</style></head>
 
-<body>
+<body background="../images/park0301.jpg">
+<p>&nbsp;</p>
+<p align="center"><a href="imain"><img src="../images/national_park.jpg" width="452" height="631" usemap="#Map" border="0" /></a></p>
+<p align="right">
+  <map name="Map" id="Map">
+    <area shape="rect" coords="214,47,345,77" href="../park/yangmingshan.html" target="imain" />
+    <area shape="poly" coords="292,199" href="#" />
+    <area shape="poly" coords="283,180" href="#" />
+    <area shape="poly" coords="284,179,285,187,277,189,276,193,270,200,280,217,291,225,316,213,317,205,320,202,319,191,320,189,311,183" href="../park/sheipa.html" target="imain" />
+  </map>
+<span class="f1">資料來源：內政部營建署『臺灣的國家公園』網站</span></p>
 </body>
 </html>
